[project]
name = "topical-focus-analyzer"
version = "0.1.0"
description = "Topical Focus Analyzer application"
authors = [
    {name = "maciusman",email = "seomaciej85@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "qdrant-client (>=1.14.3,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
